# gpd-ros

./: CMakeLists.txt  LICENSE  README.md  package.xml
cfg/: caffe_params.cfg  eigen_params.cfg
include/gpd/net/: caffe_classifier.h  layer.h
include/gpd/util/: cloud.h
launch/: gpd_detect.launch
src/: detect_grasps.cpp  detect_grasps_server.cpp
src/gpd/: grasp_detector.cpp
src/gpd/candidate/: candidates_generator.cpp
src/gpd/net/: caffe_classifier.cpp  classifier.cpp
src/gpd/util/: cloud.cpp  plot.cpp
